<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <!-- Media -->
        <ImageView
            android:id="@+id/iv_imgPhone"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/photo_description" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/txtStyle.marginLeftRight"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toEndOf="@+id/iv_imgPhone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_varian"
            style="@style/txtStyle.marginLeftRight"
            android:layout_marginTop="12dp"
            android:text="@string/subtitle"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toEndOf="@+id/iv_imgPhone"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/txt_description"
            style="@style/txtStyle.marginLeftRight"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toEndOf="@+id/iv_imgPhone"
            app:layout_constraintTop_toBottomOf="@+id/txt_varian"/>

        <!-- Buttons -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_detail"
            style="@style/txtStyle.marginLeftRight"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail"
            app:layout_constraintStart_toEndOf="@+id/iv_imgPhone"
            app:layout_constraintTop_toBottomOf="@+id/txt_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>