<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_inverseOnSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_dicoding_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/user_dicoding_name" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_dicoding_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="@+id/iv_dicoding_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_dicoding_profile"
            app:layout_constraintTop_toBottomOf="@+id/iv_dicoding_profile" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_dicoding_email"
            app:layout_constraintEnd_toEndOf="@+id/iv_dicoding_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_dicoding_profile"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <Button
            android:id="@+id/btn_toDicodingProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dicoding_click"
            app:layout_constraintEnd_toEndOf="@+id/iv_dicoding_profile"
            app:layout_constraintStart_toStartOf="@+id/iv_dicoding_profile"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>